--- a/templates/base.html
+++ b/templates/base.html
@@ -118,8 +118,14 @@
                         <img src="{{settings_data.logo.url}}" alt="logo">
                     </a>
                     <a href="login.html" class="header-widget" title="My Account">
+                        {% if user.is_authenticated %}
                         <img src="images/user.png" alt="user">
-                        <span>join</span>
+                       {% else %}
+                       <a href="#" > login </a>
+                       <a href="#" > signup </a>
+
+                       {% endif %}
+
                     </a>
 
                     <form class="header-form">
