--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -92,22 +92,32 @@
                                 </ul>
                             </div>
                             <div class="details-add-group">
+                                
+                                {% if object.quantity > 0  %}
                                 <form action="/orders/add-to-cart" method="post" class="row">
-                                {% csrf_token %}
+                                    {% csrf_token %}
+    
+                                    <div class = "clo-lg-6">
+    
+                                        <input class="action-input" title="Quantity Number" type="number" name="quantity" value="1">
+                                        <br>
+                                        <input type="hidden" value="{{object.id}}" name = "product_id">
+                                    </div>
+                                    <div class = "clo-lg-6">
+                                        <button class="product-add" title="Add to Cart"  >
+                                            <i class="fas fa-shopping-basket"></i>
+                                            <span>add to cart</span>
+                                        </button>                                    
+                                    </div>
+                               </form>    
 
-                                <div class = "clo-lg-6">
+                                {% else %}
+                                    <h2> out of stock </h2>
+                                {% endif %}
+                                    
 
-                                    <input class="action-input" title="Quantity Number" type="number" name="quantity" value="1">
-                                    <br>
-                                    <input type="hidden" value="{{object.id}}" name = "product_id">
-                                </div>
-                                <div class = "clo-lg-6">
-                                    <button class="product-add" title="Add to Cart"  >
-                                        <i class="fas fa-shopping-basket"></i>
-                                        <span>add to cart</span>
-                                    </button>                                    
-                                </div>
-                           </form>
+
+                              
                             </div>
                             <div class="details-action-group">
                                 <a class="details-wish wish" href="#" title="Add Your Wishlist">
